--- a/code/011_MA_correlation.Rmd
+++ b/code/011_MA_correlation.Rmd
@@ -425,7 +425,9 @@ for (f in fs) {
 ## pool all data together 
 ma_result_all %>%
   # dplyr::filter(subgroup == 'Overall') %>%
-  plot_effect_size_overall(data = ., color_var = 'subgroup', show_legend = T) +
+  plot_effect_size_overall(data = ., 
+                           color_var = 'subgroup', 
+                           show_legend = T) +
   theme(legend.position = c(0.3, 0.15)) +
   guides(color = guide_legend(title=subgroup_label))
 
